--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+      <!DOCTYPE html> 
+ <html> 
+ <head> 
+ <title>what</title> 
+ <meta http-equiv = "refresh" content = "0; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" /> 
+ </head> 
+ <body> 
+ <img src="12345.jpg" alt="what"> 
+ </body> 
+ </html>
